--- a/css/style.css
+++ b/css/style.css
@@ -21,5 +21,5 @@ wrapper{
     background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
 }
 .opend{
-    background-color: skyblue;
+    background-color: white;
 }
